<resources>
    <string name="app_name">Sujud</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="sdefault">Default</string>
    <string name="fajr">Fajar</string>
    <string name="sunrise">Sunrise</string>
    <string name="dhuhr">Dhuhaar</string>
    <string name="asr">Asar</string>
    <string name="maghrib">Maghrib</string>
    <string name="ishaa">Ishaa</string>
    <string name="next_fajr">Next Fajar</string>

    <string name="title_section1">TASBEEH</string>
    <string name="title_section2">PRAYER TIMINGS</string>
    <string name="title_section3">RAMADAN TIMINGS</string>
    <string name="title_section4">QIBLA</string>
    <string name="title_section5">DUAS</string>
    <string name="title_section6">99 NAMES OF ALLAH</string>
    <string name="title_section7">LEARN QURAN</string>
    <string name="title_section8">6 KAlMA</string>
    <string name="title_section9">MOSQUES NEARBY</string>

    <string name="Tap_Here_To_Sart">Tap here to start</string>

    <string-array name="items_labels">

        <item>@string/title_section2</item>
        <item>@string/title_section3</item>
        <item>@string/title_section1</item>
        <item>@string/title_section4</item>
        <item>@string/title_section5</item>
        <item>@string/title_section6</item>
        <item>@string/title_section7</item>
        <item>@string/title_section8</item>
    </string-array>

    <string name="google_api_key">AIzaSyCnph3_wogQSbD6f7UYb5REnFx1E1vw5gw</string>

    <string name="nav_item_surahrecitation">Surah Recitation</string>
    <string name="nav_item_friends">Friends</string>
    <string name="nav_item_notifications">Messages</string>


    <string name="title_messages">Messages</string>
    <string name="title_friends">Friends</string>
    <string name="title_home">Home</string>


    <string name="title_screen_slide">Screen Slide</string>
    <!-- Actions -->
    <string name="action_toggle">Toggle indicator</string>
    <string name="action_add_item">Add item</string>
    <string name="action_remove_item">Remove item</string>
    <string name="action_previous">Previous</string>
    <string name="action_next">Next</string>
    <string name="action_finish">Finish</string>
    <string name="action_info">Photo info</string>
    <string name="action_photo">View photo</string>
    <string name="lorem_ipsum"><![CDATA[Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et magna ut erat elementum cursus in quis ipsum. Nam faucibus ultrices eros, vel tempor leo semper sit amet. Duis magna quam, congue vitae interdum nec, condimentum ut lectus. Sed commodo venenatis eros a dignissim. Nunc adipiscing turpis nec magna venenatis at ultricies ipsum bibendum. Sed volutpat urna quis nisi vulputate egestas. Etiam eu dui a enim lacinia dapibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.\n\nPhasellus orci mi, eleifend nec congue id, volutpat at neque. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Integer semper velit vel leo rutrum sed fermentum elit porta.]]></string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example</string>



    <string name="description">Displays and can alert you to the daily Muslim prayer times.</string>
    <string name="adhan_next_time">Ramadan(Assawm): Next Time</string>
    <string name="adhan_timetable">Ramadan(Assawm): Azan Timetable</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="stop">Stop</string>
    <string name="help">Help</string>
    <string name="information">Information</string>
    <string name="more_applications">More Applications</string>
    <string name="today">Today</string>
    <string name="next_time_marker">&gt;</string>
    <string name="next_time_marker_reverse">&lt;</string>

    <string name="error_playing_alert">Error Playing Alert</string>
    <string name="error_playing_custom_file">Custom File Error</string>
    <string name="location_not_set"><u>Location Not Set</u>\n\nPlease enable the device\'s GPS or set your location manually through settings.</string>
    <string name="allahu_akbar">God is greater</string>
    <string name="time_for">Time for</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="extreme">Extreme</string>
    <string name="qibla">Qibla</string>
    <string name="compass_disclaimer">Compass works in portrait mode.</string>
    <string name="bearing_north">1) Bearing North = (1)°</string>
    <string name="bearing_qibla">2) Bearing Qibla = (1) (+/-) (2)° = (3)°</string>
    <string name="settings">Settings</string>
    <string name="bismillah_on_boot_up">Bismillah On Boot Up</string>
    <string name="notification">Notification</string>
    <string name="none">None</string>
    <string name="beep">Beep</string>
    <string name="recite">Recite</string>
    <string name="custom">Custom</string>
    <string name="file_path">File Path</string>
    <string name="file_path_example">File Path ex. /sdcard/sound.mp3</string>
    <string name="sinterface">Interface</string>
    <string name="advanced">Advanced</string>
    <string name="extra_alerts">Extra Alerts</string>
    <string name="daylight_savings">Daylight Savings</string>
    <string name="lookup_gps">Lookup\nGPS</string>
    <string name="system_time_zone">System Time Zone</string>
    <string name="gmt">GMT</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="calculation">Calculation</string>
    <string name="egypt_survey">Egyptian General Authority of Survey</string>
    <string name="karachi_shaf">Shaf`i - Karachi University of Islamic Sciences</string>
    <string name="karachi_hanaf">Hanafi - Karachi University of Islamic Sciences</string>
    <string name="north_america">Islamic Society of North America</string>
    <string name="muslim_league">Muslim World League</string>
    <string name="umm_alqurra">Umm Al-Qurra, Saudi Arabia</string>
    <string name="fixed_ishaa">Fixed Ishaa Interval (always 90)</string>
    <string name="time_format">Time Format</string>
    <string name="clock_24_hour">24 Hour Clock</string>
    <string name="altitude">Altitude</string>
    <string name="pressure">Pressure</string>
    <string name="temperature">Temperature</string>
    <string name="degrees_celsius">°C</string>
    <string name="rounding">Rounding</string>
    <string name="normal">Normal</string>
    <string name="special">Special</string>
    <string name="aggressive">Aggressive</string>
    <string name="offset">Offset</string>
    <string name="minutes">minutes</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="brown">Brown</string>
    <string name="dialog">Dialog</string>
    <string name="green">Green</string>
    <string name="light">Light</string>
    <string name="month0">Muharram</string>
    <string name="month1">Safar</string>
    <string name="month2">Rabi` al-awwal</string>
    <string name="month3">Rabi` al-thani</string>
    <string name="month4">Jumada al-awwal</string>
    <string name="month5">Jumada al-thani</string>
    <string name="month6">Rajab</string>
    <string name="month7">Sha`aban</string>
    <string name="month8">Ramadan</string>
    <string name="month9">Shawwal</string>
    <string name="month10">Dhu al-Qi`dah</string>
    <string name="month11">Dhu al-Hijjah</string>
    <string name="anno_hegirae">AH</string>
    <string name="title_activity_splash">Splash</string>
    <!-- -
        This is an ad unit ID for a banner test ad. Replace with your own banner ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="banner_ad_unit_id">ca-app-pub-7120050676645894/5256340363</string>

</resources>
