<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/back"
    >
<ScrollView

    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:layout_above="@+id/adView">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                style="@style/labelColumn"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="fill_vertical"
                    android:text="@string/latitude"
                    android:textColor="@color/background_text_color" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="fill_vertical"
                    android:text="@string/longitude"
                    android:textColor="@color/background_text_color" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="fill_vertical"
                    android:text="@string/calculation"
                    android:textColor="@color/background_text_color" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/latitude"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"

                                android:numeric="signed|decimal"
                                android:singleLine="true"
                                android:text="43.67"
                                android:textColor="@color/background_text_color" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/longitude"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:numeric="signed|decimal"
                                android:singleLine="true"
                                android:text="-79.4167"
                                android:textColor="@color/background_text_color" />
                        </LinearLayout>
                    </LinearLayout>

                    <Button
                        android:id="@+id/lookup_gps"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/lookup_gps"
                        android:background="@drawable/button"
                        android:textColor="@color/background_text_color" />
                </LinearLayout>

                <Spinner
                    android:id="@+id/calculation_methods"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawSelectorOnTop="true"
                    android:textColor="@color/background_text_color" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                style="@style/labelColumn"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/background_text_color"
                    android:gravity="fill_vertical"
                    android:text="@string/time_format" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/background_text_color"
                    android:gravity="fill_vertical"
                    android:text="@string/altitude" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/background_text_color"
                    android:gravity="fill_vertical"
                    android:text="@string/pressure" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/background_text_color"
                    android:gravity="fill_vertical"
                    android:text="@string/temperature" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/background_text_color"
                    android:gravity="fill_vertical"
                    android:text="@string/rounding" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/background_text_color"
                    android:gravity="fill_vertical"
                    android:text="@string/offset" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/time_format"
                    android:layout_width="fill_parent"
                    android:textColor="@color/background_text_color"
                    android:layout_height="wrap_content"
                    android:drawSelectorOnTop="true" />

                <EditText
                    android:id="@+id/altitude"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:numeric="signed|decimal"
                    android:textColor="@color/background_text_color"
                    android:singleLine="true"
                    android:text="0" />

                <EditText
                    android:id="@+id/pressure"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:numeric="signed|decimal"
                    android:textColor="@color/background_text_color"
                    android:singleLine="true"
                    android:text="1010" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/temperature"
                        android:layout_width="90dip"
                        android:textColor="@color/background_text_color"
                        android:layout_height="wrap_content"
                        android:numeric="signed|decimal"
                        android:singleLine="true"
                        android:text="10" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5px"
                        android:textColor="@color/background_text_color"
                        android:text="@string/degrees_celsius" />
                </LinearLayout>

                <Spinner
                    android:id="@+id/rounding_types"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/background_text_color"
                    android:drawSelectorOnTop="true" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"

                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/offset_minutes"
                        android:layout_width="60dip"
                        android:layout_height="wrap_content"
                        android:maxLength="4"
                        android:textColor="@color/background_text_color"
                        android:numeric="signed"
                        android:singleLine="true"
                        android:text="0" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5px"
                        android:textColor="@color/background_text_color"
                        android:text="@string/minutes" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <include layout="@layout/buttons_save_reset" />
    </LinearLayout>


</ScrollView>
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"></com.google.android.gms.ads.AdView>
</RelativeLayout>